tests/snapshots/integration__spec__arg_terminated.snap
---
source: tests/spec.rs
expression: data
---
RUN
prog cmda -h

# OUTPUT
argc_args=( -h )
argc__args=( prog cmda -h )
argc__fn=cmda
argc__positionals=( -h )
cmda -h

# BUILD_OUTPUT
argc__args=([0]="prog" [1]="cmda" [2]="-h")
argc__fn=cmda
argc__positionals=([0]="-h")
argc_args=([0]="-h")
cmda -h
