tests/snapshots/integration__spec__arg_two_multi.snap
---
source: tests/spec.rs
expression: data
---
************ RUN ************
prog cmd_two_multi_args a b c

# OUTPUT
argc_val1=( a b )
argc_val2=( c )
argc__args=( prog cmd_two_multi_args a b c )
argc__fn=cmd_two_multi_args
argc__positionals=( a b c )
cmd_two_multi_args a b c

# RUN_OUTPUT
argc__args=([0]="prog" [1]="cmd_two_multi_args" [2]="a" [3]="b" [4]="c")
argc__fn=cmd_two_multi_args
argc__positionals=([0]="a" [1]="b" [2]="c")
argc_val1=([0]="a" [1]="b")
argc_val2=([0]="c")
cmd_two_multi_args a b c

************ RUN ************
prog cmd_two_multi_args -- a b c

# OUTPUT
argc_val1=( a b )
argc_val2=( c )
argc__args=( prog cmd_two_multi_args -- a b c )
argc__fn=cmd_two_multi_args
argc__positionals=( a b c )
cmd_two_multi_args a b c

# RUN_OUTPUT
argc__args=([0]="prog" [1]="cmd_two_multi_args" [2]="--" [3]="a" [4]="b" [5]="c")
argc__fn=cmd_two_multi_args
argc__positionals=([0]="a" [1]="b" [2]="c")
argc_val1=([0]="a" [1]="b")
argc_val2=([0]="c")
cmd_two_multi_args a b c

************ RUN ************
prog cmd_two_multi_args a -- b c

# OUTPUT
argc_val1=( a )
argc_val2=( b c )
argc__args=( prog cmd_two_multi_args a -- b c )
argc__fn=cmd_two_multi_args
argc__positionals=( a b c )
cmd_two_multi_args a b c

# RUN_OUTPUT
argc__args=([0]="prog" [1]="cmd_two_multi_args" [2]="a" [3]="--" [4]="b" [5]="c")
argc__fn=cmd_two_multi_args
argc__positionals=([0]="a" [1]="b" [2]="c")
argc_val1=([0]="a")
argc_val2=([0]="b" [1]="c")
cmd_two_multi_args a b c

************ RUN ************
prog cmd_two_multi_args a b -- c

# OUTPUT
argc_val1=( a b )
argc_val2=( c )
argc__args=( prog cmd_two_multi_args a b -- c )
argc__fn=cmd_two_multi_args
argc__positionals=( a b c )
cmd_two_multi_args a b c

# RUN_OUTPUT
argc__args=([0]="prog" [1]="cmd_two_multi_args" [2]="a" [3]="b" [4]="--" [5]="c")
argc__fn=cmd_two_multi_args
argc__positionals=([0]="a" [1]="b" [2]="c")
argc_val1=([0]="a" [1]="b")
argc_val2=([0]="c")
cmd_two_multi_args a b c

************ RUN ************
prog cmd_two_multi_args a b c --

# OUTPUT
argc_val1=( a b c )
argc__args=( prog cmd_two_multi_args a b c -- )
argc__fn=cmd_two_multi_args
argc__positionals=( a b c )
cmd_two_multi_args a b c

# RUN_OUTPUT
argc__args=([0]="prog" [1]="cmd_two_multi_args" [2]="a" [3]="b" [4]="c" [5]="--")
argc__fn=cmd_two_multi_args
argc__positionals=([0]="a" [1]="b" [2]="c")
argc_val1=([0]="a" [1]="b" [2]="c")
cmd_two_multi_args a b c
