tests/snapshots/integration__spec__auto_alias_subcommand.snap
---
source: tests/spec.rs
expression: data
---
************ RUN ************
prog -h

# OUTPUT
command cat >&2 <<-'EOF' 
USAGE: prog <COMMAND>

COMMANDS:
  cmd_a  [aliases: cmd-a]
  _cmdb

EOF
exit 0

# RUN_OUTPUT
USAGE: prog <COMMAND>

COMMANDS:
  cmd_a  [aliases: cmd-a]
  _cmdb

************ RUN ************
prog cmd_a

# OUTPUT
argc__args=( prog cmd_a )
argc__fn=cmd_a
argc__positionals=(  )
cmd_a

# RUN_OUTPUT
argc__args=([0]="prog" [1]="cmd_a")
argc__fn=cmd_a
argc__positionals=()
cmd_a

************ RUN ************
prog cmd-a

# OUTPUT
argc__args=( prog cmd-a )
argc__fn=cmd_a
argc__positionals=(  )
cmd_a

# RUN_OUTPUT
argc__args=([0]="prog" [1]="cmd-a")
argc__fn=cmd_a
argc__positionals=()
cmd_a

************ RUN ************
prog _cmdb

# OUTPUT
argc__args=( prog _cmdb )
argc__fn=_cmdb
argc__positionals=(  )
_cmdb

# RUN_OUTPUT
argc__args=([0]="prog" [1]="_cmdb")
argc__fn=_cmdb
argc__positionals=()
_cmdb
