tests/snapshots/integration__spec__cmd_combine_shorts.snap
---
source: tests/spec.rs
expression: data
---
************ RUN ************
prog -A

# OUTPUT
argc__args=( prog -A )
argc__fn=-A
argc__positionals=(  )
-A

# RUN_OUTPUT
argc__args=([0]="prog" [1]="-A")
argc__fn=-A
argc__positionals=()
-A

************ RUN ************
prog -AB

# OUTPUT
argc_B=1
argc__args=( prog -AB )
argc__fn=-A
argc__positionals=(  )
-A

# RUN_OUTPUT
error: `prog` requires a subcommand but one was not provided
  [subcommands: -A]
