tests/snapshots/integration__spec__cmd_with_hyphen.snap
---
source: tests/spec.rs
expression: data
---
************ RUN ************
prog --foo --fa

# OUTPUT
argc_fa=1
argc__args=( prog --foo --fa )
argc__fn=--foo
argc__positionals=(  )
--foo

# RUN_OUTPUT
argc__args=([0]="prog" [1]="--foo" [2]="--fa")
argc__fn=--foo
argc__positionals=()
argc_fa=1
--foo

************ RUN ************
prog -B --fa

# OUTPUT
argc_fa=1
argc__args=( prog -B --fa )
argc__fn=bar
argc__positionals=(  )
bar

# RUN_OUTPUT
argc__args=([0]="prog" [1]="-B" [2]="--fa")
argc__fn=bar
argc__positionals=()
argc_fa=1
bar
