tests/snapshots/integration__spec__dashdash_split.snap
---
source: tests/spec.rs
expression: data
---
************ RUN ************
prog v1 -f --oa a

OUTPUT
argc_f=1
argc_oa=a
argc_v1=v1
argc__args=( prog v1 -f --oa a )
argc__index=0
argc__positionals=( v1 )

************ RUN ************
prog v1 -f -- --oa a

OUTPUT
argc_f=1
argc_v1=v1
argc_v2=( --oa a )
argc__args=( prog v1 -f -- --oa a )
argc__index=0
argc__positionals=( v1 --oa a )


